@@ -8,7 +8,7 @@
 #define NOP_OPCODE 0x00000000
 
 // GAME addresses (should move to external configuration files)
-#define MEMORY_PARTITION_POINTER 0x08B3C11C
+//#define MEMORY_PARTITION_POINTER 0x08B3C11C
 
 // Fixed loading address for relocatables
 #define PRX_LOAD_ADDRESS 0x08900000
@@ -47,6 +47,9 @@
 
 // Maximum attempts to reestimate a syscall
 #define MAX_REESTIMATE_ATTEMPTS 5
+
+// HBL stubs address
+#define HBL_STUBS_START 0x10000
 
 //
 //Files locations
