@@ -3,6 +3,7 @@
 #include <pspkernel.h>
 #include <pspdebug.h>
 #include <pspaudio.h>
+#include <psputility.h>
 
 #ifndef __VAL-SDK__
 #define __VAL-SDK__
