@@ -210,7 +210,7 @@ class Integer
 end      
 
 
-curr_addr = 0; #0x0880FF00 # 0x00013F00
+curr_addr = 0x10000; #0x0880FF00 # 0x00013F00
 nb_nids = 0;
 nids_offset = 12 + stub_addresses["50x"].size * 4
 config.each {|libinfo | 
@@ -237,12 +237,13 @@ out.puts %Q{# This file was automatically generated by eLoaderconf.rb
 
 	.globl  \\funcname
 	.ent    \\funcname
-\\funcname:
-	lui $v0, 0x1            # Put 0x10000 in $v0, $v0 is return value so there's no need to back it up
-	lw $v0, 0x18 ($v0)      # Get HBL stubs address, see eloader.c or loader.c for more info
-	addi $v0, $v0, \\offset # Add offset
-	jr $v0                  # Jump to stub
-	nop                     # Leave this delay slot empty!
+\\funcname = \\offset
+#\\funcname:
+#	lui $v0, 0x1            # Put 0x10000 in $v0, $v0 is return value so there's no need to back it up
+#	lw $v0, 0x18 ($v0)      # Get HBL stubs address, see eloader.c or loader.c for more info
+#	addi $v0, $v0, \\offset # Add offset
+#	jr $v0                  # Jump to stub
+#	nop                     # Leave this delay slot empty!
 	.end	\\funcname
 
 .endm
@@ -276,7 +277,7 @@ config.each {|libinfo |
         if nidinfo[1].size > max then max = nidinfo[1].size end
     }
     libinfo[:functions].each {|nidinfo | 
-        out.puts("\tAddNid #{nidinfo[1]}, 0x" +  curr_addr.to_s(16).rjust(4, "0") + " " * (max - nidinfo[1].size) + " # 0x" + nidinfo[0].to_s(16));   
+        out.puts("\tAddNID #{nidinfo[1]}, 0x" +  curr_addr.to_s(16).rjust(4, "0") + " " * (max - nidinfo[1].size) + " # 0x" + nidinfo[0].to_s(16));   
         out_conf.each { |k, v|        
             v.write(nidinfo[0].mips(4));
         }
